--- a/src/main/resources/templates/automobili/index.html
+++ b/src/main/resources/templates/automobili/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Index</title>
 </head>
 <body>
-<h1>Ciao</h1>
+<header>
+    <div class="container-fluid bg-light pt-3 pb-3">
+        <div class="row text-center">
+            <div class="col-4 text-start pt-4 pb-4">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><strong>Home</strong></a>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Auto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Modelli</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-primary" type="submit">Search</button>
+                        </form>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-4 pt-2 pb-2">
+                <h5>gruppo</h5>
+                <h1><strong>AUTOJAITA</strong></h1>
+            </div>
+            <div class="col-4 text-end fs-6 pt-5 pb-4">
+                <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
+                <i class="fa fa-facebook" style="font-size:38px;color:blue"></i>
+                <i class="fa fa-twitter text-primary" style="font-size:38px;"></i>
+            </div>
+        </div>
+    </div>
+</header>
+<main>
+<div class="container">
+    <div class="row">
+        <div class="col">
+
+        </div>
+    </div>
+</div>
+</main>
+<footer>
+    <div class="container-fluid bg-light pt-4 pb-3">
+        <div class="row text-center">
+            <p>©Copyright 2024</p>
+        </div>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
