--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -7,7 +7,9 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+
+    <title>Home</title>
 </head>
 <body>
 <header>
@@ -48,13 +50,40 @@
     </div>
 </header>
 <main>
-    <div class="container">
+    <h3 class="text-center text-info mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
+    <div class="container mb-3">
         <div class="row">
-            <div class="col-6">
-
+            <div class="col-6 mt-5">
+            <h5>Chi siamo:</h5>
+                <p style="font-size: 13px">
+                    Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
+                    Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici dedicati
+                    a fornire un servizio straordinario e veicoli di alta qualità.
+                    La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione un'ampia gamma di auto
+                    che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La nostra squadra di professionisti
+                    è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue esigenze.
+                    Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza, affidabilità e dedizione. Con AutoJaita,
+                    non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si tramanda da generazioni.
+                </p>
             </div>
             <div class="col-6">
                 <img src="https://img.freepik.com/free-photo/brand-new-car-ai-generated-image_268835-5688.jpg" alt="Auto-Arancione">
+            </div>
+        </div>
+    </div>
+    <div class="container mb-3">
+        <div class="row">
+            <div class="col-6">
+                <img style="width:650px;" src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg" alt="Auto-Arancione">
+            </div>
+            <div class="col-6 mt-5 ps-5 pt-5">
+                <h5>Perchè Scegliere AutoJaita?</h5>
+                <p style="font-size: 13px">Scegliere AutoJaita significa immergersi in un universo automobilistico di classe e convenienza.
+                    Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza eguali.
+                    Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli standard più elevati.
+                    Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si fondono in un'offerta unica,
+                    plasmata per soddisfare le tue esigenze automobilistiche
+                </p>
             </div>
         </div>
     </div>
