--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -50,11 +50,11 @@
     </div>
 </header>
 <main>
-    <h3 class="text-center text-info mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
+    <h3 class="text-center text-warning mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
     <div class="container mb-3">
         <div class="row">
             <div class="col-6 mt-5">
-            <h5>Chi siamo:</h5>
+            <h5 class="text-warning">Chi siamo:</h5>
                 <p style="font-size: 13px">
                     Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
                     Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici dedicati
@@ -77,7 +77,7 @@
                 <img style="width:650px;" src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg" alt="Auto-Arancione">
             </div>
             <div class="col-6 mt-5 ps-5 pt-5">
-                <h5>Perchè Scegliere AutoJaita?</h5>
+                <h5 class="text-warning">Perchè Scegliere AutoJaita?</h5>
                 <p style="font-size: 13px">Scegliere AutoJaita significa immergersi in un universo automobilistico di classe e convenienza.
                     Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza eguali.
                     Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli standard più elevati.
@@ -90,8 +90,27 @@
 </main>
 <footer>
     <div class="container-fluid bg-light pt-4 pb-3">
-        <div class="row text-center">
+        <div class="row">
+           <div class="col-12 text-center">
+               <h6>gruppo</h6>
+               <h4><strong>AUTOJAITA</strong></h4>
+               <p style="font-size: 10px">partita iva: 0050000400009</p>
+           </div>
+            <div class="col-6 text-end" style="font-size: 12px">
+            <h5 class="text-warning">Vendita</h5>
+                <p>Lunedì - Venerdì: 9:00 - 13.30 / 14.30 - 19:30</p>
+                <p>Sabato: 9:00 - 13.30 / 14:30 - 18:00</p>
+                <p>Domenica: 10.00 - 13.00</p>
+            </div>
+            <div class="col-6" style="font-size: 12px">
+            <h5 class="text-warning">Assistenza</h5>
+                <p>Lunedì - venerdì: 8:30 - 13:30 / 14:30 - 18:30</p>
+                <p>Sabato: 8:30 - 13:30</p>
+                <p>Domenica: Chiuso</p>
+            </div>
+        <div class=" col-12 row text-center">
             <p>©Copyright 2024</p>
+        </div>
         </div>
     </div>
 </footer>
