--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -14,28 +14,30 @@
 <body>
 <header>
     <div class="container-fluid bg-light pt-3 pb-3">
-        <div class="row text-center">
+        <div class="row navbar text-center">
             <div class="col-4 text-start pt-4 pb-4">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"><strong>Home</strong></a>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Auto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Modelli</a>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit">Search</button>
-                        </form>
-                    </div>
-                </nav>
+                <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
+                               th:href="@{/auto}">Auto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
+                               th:href="@{/auto}">Modelli</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                    </form>
+                </div>
+
             </div>
             <div class="col-4 pt-2 pb-2">
                 <h5>gruppo</h5>
