--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -14,14 +14,15 @@
 <body>
 <header>
     <div class="container-fluid bg-light pt-3 pb-3">
-        <div class="row navbar text-center">
+        <div class="row navbar navbar-expand-lg text-center">
             <div class="col-4 text-start pt-4 pb-4">
-                <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
+                    <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
