--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -24,10 +24,10 @@
         </thead>
         <tbody>
         <tr th:each="rifo : ${rifornimentoList}">
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th th:text="${rifo.id}"></th>
+            <td th:text="${rifo.data}"></td>
+            <td th:text="${rifo.nomeFornitore}"></td>
+            <td></td>
         </tr>
         </tbody>
         <hr>
@@ -37,6 +37,7 @@
             <a class="btn btn-primary" th:href="@{/acquistoRifornitore/create}">Aggiungi rifornimento</a>
         </div>
     </div>
+    <a class="btn btn-primary" th:href="@{/}">Back Home</a>
 
 
 </div>
