--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -32,6 +32,11 @@
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
                                th:href="@{/auto}">Modelli</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
+                               th:href="@{/acquistoRifornitore}">Rifornimento</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control" type="search" placeholder="Search" aria-label="Search">
