--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -8,114 +8,31 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <title>Title</title>
+    <title>Parco Auto</title>
 </head>
 <body>
-<h1>Culo</h1>
-<!--<header>
-    <div class="container-fluid bg-light pt-3 pb-3">
-        <div class="row text-center">
-            <div class="col-4 text-start pt-4 pb-4">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"><strong>Home</strong></a>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Auto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Modelli</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Rifornimento</a>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit">Search</button>
-                        </form>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-4 pt-2 pb-2">
-                <h5>gruppo</h5>
-                <h1><strong>AUTOJAITA</strong></h1>
-            </div>
-            <div class="col-4 text-end fs-6 pt-5 pb-4">
-                <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
-                <i class="fa fa-facebook" style="font-size:38px;color:blue"></i>
-                <i class="fa fa-twitter text-primary" style="font-size:38px;"></i>
-            </div>
+<h1>Parco Auto</h1>
+<hr>
+<div class="row g-5 flex-wrap justify-content-between">
+    <div th:each="auto : ${listaAuto}" class="card" style="width: 17rem; padding: 0px;">
+        <img th:src="${auto.foto}" class="card-img" alt="foto">
+        <div class="card-body">
+            <h5 th:text="${auto.name}" class="card-title"></h5>
+            <p th:text="${auto.price} + €" class="card-text"></p>
+            <a th:href=@{/acquistoCliente} class="btn btn-primary btn-sm">Acquista</a>
+            <a th:href=@{/auto/show/{id}(id=${auto.id})} class="btn btn-primary btn-sm">Dettagli</a>
+            <a th:href=@{/auto/edit/{id}(id=${auto.id})} class="btn btn-primary btn-sm">Modifica</a>
+            <form th:action="@{/auto/delete/{id}(id=${auto.id})}"
+                  class="mt-2"
+                  method="post"
+                  onsubmit="return confirm('Are you sure?')"
+                  style="display:inline;">
+                <button type="submit" class="btn btn-danger btn-sm">Cancella</button>
+            </form>
         </div>
     </div>
-</header>
-<main class="container">
-    <div class="row">
-        <div class="d-flex">
-            <div class="card m-2 shadow card" style="width: 20rem;" th:each="auto : ${}">
-                <a th:href="@{/auto/show/{id}(id=${auto.id})}">
-                    <img th:src="@{${.foto}}" class="card-img-top" alt="image recipe">
-                </a>
-                <div class="card-body">
-                    <div class="row">
-                        <h2 class="card-title col-9 pt-3" th:text="${auto.name}"></h2>
-                        <h5 class="col-3 pt-3" th:text="|${auto.description}|"></h5>
-                        <p th:text="|Per ${auto.price} €|"></p>
-                    </div>
-                </div>
+</div>
 
-                <div class="card-body d-flex justify-content-between ">
-                    <div class="col-5">
-                        <a class="btn btn-dark " th:href="@{/auto/acquistoCliente/{id}(id=${auto.id})}">Acquista</a>
-                    </div>
-                    <div class="col-5">
-                        <a class="btn btn-dark " th:href="@{/auto/edit/{id}(id=${auto.id})}">Modifica</a>
-                    </div>
-                    <form th:action="@{/auto/delete/{id}(id=${auto.id})}" method="post"
-                          onsubmit="return confirm('Vuoi eliminare quest'auto?')">
-                        <button type="submit" class="btn btn-dark">Cancella</button>
-                    </form>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="mt-3 d-flex justify-content-center">
-        <a class="btn btn-dark" th:href="@{/auto/create}">Aggiungi Auto +</a>
-    </div>
-
-</main>
-<footer>
-    <div class="container-fluid bg-light pt-4 pb-3">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h6>gruppo</h6>
-                <h4><strong>AUTOJAITA</strong></h4>
-                <p style="font-size: 10px">partita iva: 0050000400009</p>
-            </div>
-            <div class="col-6 text-end" style="font-size: 12px">
-                <h5 class="text-warning">Vendita</h5>
-                <p>Lunedì - Venerdì: 9:00 - 13.30 / 14.30 - 19:30</p>
-                <p>Sabato: 9:00 - 13.30 / 14:30 - 18:00</p>
-                <p>Domenica: 10.00 - 13.00</p>
-            </div>
-            <div class="col-6" style="font-size: 12px">
-                <h5 class="text-warning">Assistenza</h5>
-                <p>Lunedì - venerdì: 8:30 - 13:30 / 14:30 - 18:30</p>
-                <p>Sabato: 8:30 - 13:30</p>
-                <p>Domenica: Chiuso</p>
-            </div>
-            <div class=" col-12 row text-center">
-                <p>©Copyright 2024</p>
-            </div>
-        </div>
-    </div>
-</footer>
--->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
