--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -19,6 +19,7 @@
             <th scope="col">Id</th>
             <th scope="col">Data</th>
             <th scope="col">Nome Fornitore</th>
+            <th scope="col">Prezzo</th>
             <th scope="col">Auto</th>
         </tr>
         </thead>
@@ -27,7 +28,9 @@
             <th th:text="${rifo.id}"></th>
             <td th:text="${rifo.data}"></td>
             <td th:text="${rifo.nomeFornitore}"></td>
-            <td></td>
+            <td th:text="${rifo.price + ' €'}"></td>
+            <td th:text="${rifo.getAuto().getName()}" th:if="${rifo.getAuto() != null}"></td>
+
         </tr>
         </tbody>
         <hr>
