--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -28,10 +28,20 @@
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
                                th:href="@{/auto}">Auto</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
-                               th:href="@{/auto}">Modelli</a>
-                        </li>
+                        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Categorie
+                                    </a>
+                                    <ul class="dropdown-menu " >
+                                        <li th:each="autoType:${autoTypeList}">
+                                            <a class="dropdown-item" th:href="@{#}" th:text="${autoType.name}"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
 
                         <li class="nav-item">
                             <a class="nav-link" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
