--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -21,7 +21,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
@@ -35,7 +34,7 @@
                                     </a>
                                     <ul class="dropdown-menu " >
                                         <li th:each="autoType:${autoTypeList}">
-                                            <a class="dropdown-item" th:href="@{#}" th:text="${autoType.name}"></a>
+                                            <a class="dropdown-item" th:href="@{/auto/{id}(id=${autoType.id})}" th:text="${autoType.name}"></a>
                                         </li>
                                     </ul>
                                 </li>
@@ -54,9 +53,11 @@
 
             </div>
             <div class="col-4 pt-2 pb-2">
+                <a class="navbar-brand" th:href="@{/}">
                 <h5>gruppo</h5>
                 <h1><strong>AUTOJAITA</strong></h1>
                 <h6>S.R.L.</h6>
+            </a>
             </div>
             <div class="col-4 text-end fs-6 pt-5 pb-4">
                 <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
