--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -22,7 +22,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
@@ -56,9 +55,11 @@
 
             </div>
             <div class="col-4 pt-2 pb-2">
+                <a class="navbar-brand" th:href="@{/}">
                 <h5>gruppo</h5>
                 <h1><strong>AUTOJAITA</strong></h1>
                 <h6>S.R.L.</h6>
+                </a>
             </div>
             <div class="col-4 text-end fs-6 pt-5 pb-4">
                 <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
