--- a/src/main/resources/templates/rifornimento/create.html
+++ b/src/main/resources/templates/rifornimento/create.html
@@ -53,9 +53,11 @@
 
             </div>
             <div class="col-4 pt-2 pb-2">
-                <h5>gruppo</h5>
-                <h1><strong>AUTOJAITA</strong></h1>
-                <h6>S.R.L.</h6>
+                <a class="navbar-brand" th:href="@{/}">
+                    <h5>gruppo</h5>
+                    <h1><strong>AUTOJAITA</strong></h1>
+                    <h6>S.R.L.</h6>
+                </a>
             </div>
             <div class="col-4 text-end fs-6 pt-5 pb-4">
                 <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
