--- a/src/main/resources/templates/rifornimento/create.html
+++ b/src/main/resources/templates/rifornimento/create.html
@@ -7,6 +7,8 @@
           rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
 <header>
@@ -19,7 +21,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <a class="navbar-brand" th:href="@{/}"><strong>Home</strong></a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
