reso responsive Home

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -73,7 +73,7 @@
     <h3 class="text-center text-warning mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
     <div class="container mb-3">
         <div class="row">
-            <div class="col-6 mt-5">
+            <div class="col-12 mt-5 col-md-6">
             <h5 class="text-warning">Chi siamo:</h5>
                 <p style="font-size: 13px">
                     Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
@@ -86,17 +86,17 @@
                     non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si tramanda da generazioni.
                 </p>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <img src="https://img.freepik.com/free-photo/brand-new-car-ai-generated-image_268835-5688.jpg" alt="Auto-Arancione">
             </div>
         </div>
     </div>
     <div class="container mb-3">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <img style="width:650px;" src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg" alt="Auto-Arancione">
             </div>
-            <div class="col-6 mt-5 ps-5 pt-5">
+            <div class="col-12 mt-5 ps-5 pt-5 col-md-6">
                 <h5 class="text-warning">Perchè Scegliere AutoJaita?</h5>
                 <p style="font-size: 13px">Scegliere AutoJaita significa immergersi in un universo automobilistico di classe e convenienza.
                     Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza eguali.
