--- a/src/main/resources/templates/automobili/create.html
+++ b/src/main/resources/templates/automobili/create.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments/resources :: head('Auto Create')"></head>
 <body>
-<h1>Poveri</h1>
+<header th:replace="fragments/resources :: header"></header>
+
+<footer th:replace="fragments/resources :: footer"></footer>
+<th:block th:replace="fragments/resources :: script"></th:block>
 </body>
 </html>
