--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -15,6 +15,9 @@
             <th scope="col">Nome Fornitore</th>
             <th scope="col">Prezzo</th>
             <th scope="col">Auto</th>
+            <th scope="col" class="text-center">Quantità Rifornimento</th>
+            <th scope="col" class="text-center">Quantità Acquistate</th>
+            <th scope="col" class="text-center">Quantità Rimaste</th>
         </tr>
         </thead>
         <tbody>
@@ -24,6 +27,9 @@
             <td th:text="${rifo.nomeFornitore}"></td>
             <td th:text="${rifo.price + ' €'}"></td>
             <td th:text="${rifo.getAuto().getName()}" th:if="${rifo.getAuto() != null}"></td>
+            <td th:text="${rifo.quantita}" class="text-center"></td>
+            <td></td>
+            <td></td>
         </tr>
         </tbody>
         <hr>
