--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -4,14 +4,15 @@
 <body>
 <header th:replace="fragments/resources :: header"></header>
 <main>
-    <form class="" th:object="${acquisto}" th:action="@{/auto/acquisto}" method="post">
-        <label class="form-label" for="marca">Marca</label>
-        <input id="marca" class="form-control" th:field="${acquisto.getAuto().getNome()}">
-        <label class="form-label" for="data">Data</label>
-        <input id="data" class="form-control" th:field="${acquisto.data}">
-        <label class="form-label" for="quantità"></label>
-        <input id="quantità" class="form-control" th:field="${acquisto.quantità}">
-    </form>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body">
+            Quante macchine vuoi comprare?
+            <div class="mt-2 pt-2 border-top">
+                <button type="button" class="btn btn-primary btn-sm">Take action</button>
+                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
+            </div>
+        </div>
+    </div>
 </main>
 
 <footer th:replace="fragments/resources :: footer"></footer>
