Pagina di Create fatta

--- a/src/main/resources/templates/automobili/create.html
+++ b/src/main/resources/templates/automobili/create.html
@@ -3,7 +3,53 @@
 <head th:replace="fragments/resources :: head('Auto Create')"></head>
 <body>
 <header th:replace="fragments/resources :: header"></header>
+<div class="container text-center">
+        <h1 class="">Create Auto</h1>
+        <hr>
+        <form
+                id="create-auto"
+                method="post"
+                th:object="${auto}"
+                th:action="@{/auto/create}"
+                class="row text-center d-flex justify-content-center gy-3">
 
+                <div class="col-8">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" type="text" id="name" th:field="*{name}"
+                           th:errorClass="is-invalid">
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('name')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-8">
+                    <label for="description" class="form-label">Auto Description</label>
+                    <textarea class="form-control" rows="10" id="description" th:field="*{description}"></textarea>
+                </div>
+                <div class="col-4 ms-5">
+                    <label class="form-label" for="price">Prezzo</label>
+                    <input class="form-control" type="number" id="price" th:field="*{price}"
+                           th:errorClass="is-invalid">
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('price')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-5">
+                    <p>Auto Type:</p>
+                    <select th:field="*{autoType}">
+                        <option th:each="auto : ${autoTypeList}"  th:value="${auto.id}" th:text="${auto.name}"></option>
+                    </select>
+                </div>
+
+            <div class="col-8 mt-5 mb-5">
+                <button type="submit" class="btn btn-primary">Save</button>
+                <a class="btn btn-primary" th:href="@{/auto}">Back Home</a>
+            </div>
+        </form>
+</div>
 <footer th:replace="fragments/resources :: footer"></footer>
 <th:block th:replace="fragments/resources :: script"></th:block>
 </body>
