--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/resources :: head('Parco Auto')"></head>
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<div class="container-fluid bg-light mt-5">
+<div class="container-fluid bg-light mt-5 border-bottom pb-4">
     <div class="row ms-5 g-5 flex-wrap justify-content-between">
         <div class="col-md-4" th:each="auto : ${listaAuto}">
             <div class="card ms-5" style="width: 17rem; padding: 0px;">
@@ -27,6 +27,10 @@
         </div>
     </div>
 </div>
+<div class="bg-light text-center">
+<a th:href=@{/auto/create} class="btn btn-outline-dark btn-sm m-3">Aggiungi Auto +</a>
+</div>
+
 <footer th:replace="fragments/resources :: footer"></footer>
 <th:block th:replace="fragments/resources :: script"></th:block>
 </body>
