--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -11,7 +11,7 @@
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <title th:text="${title}"></title>
 </head>
 <body>
@@ -50,8 +50,12 @@
                                th:href="@{/acquistoRifornitore}">Rifornimento</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex"
+                          th:action="@{/auto}"
+                          method="get"
+                          id="auto-search"
+                          role="search">
+                        <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Search">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
                 </div>
@@ -72,7 +76,7 @@
     </div>
 </header>
 <footer th:fragment="footer">
-    <div class="container-fluid bg-light pt-4 pb-3">
+    <div class="container-fluid bg-light pt-4 pb-3 border-top">
         <div class="row">
             <div class="col-12 text-center">
                 <h6>gruppo</h6>
