Cambio colorazione header, footer, e cambio icone instagram, facebook, twitter

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -5,11 +5,11 @@
 <body>
 <header th:replace="fragments/resources :: header"></header>
 <main>
-    <h3 class="text-center text-warning mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
+    <h3 class="text-center color-hf mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
     <div class="container mb-3">
         <div class="row">
             <div class="col-12 mt-5 col-md-6">
-            <h5 class="text-warning">Chi siamo:</h5>
+            <h5 class="color-hf">Chi siamo:</h5>
                 <p style="font-size: 13px">
                     Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
                     Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici dedicati
@@ -32,7 +32,7 @@
                 <img style="width:650px;" src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg" alt="Auto-Arancione">
             </div>
             <div class="col-12 mt-5 ps-5 pt-5 col-md-6">
-                <h5 class="text-warning">Perchè Scegliere AutoJaita?</h5>
+                <h5 class="color-hf">Perchè Scegliere AutoJaita?</h5>
                 <p style="font-size: 13px">Scegliere AutoJaita significa immergersi in un universo automobilistico di classe e convenienza.
                     Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza eguali.
                     Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli standard più elevati.
