--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header th:fragment="header">
-    <div class="container-fluid bg-light pt-3 pb-3">
+    <div class="container-fluid bg-color-hf pt-3 pb-3">
         <div class="row navbar navbar-expand-lg text-center">
             <div class="col-4 text-start pt-4 pb-4">
 
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" th:classappend="${area == 'auto' ? 'active' : ''}"
+                            <a class="nav-link color-hf" th:classappend="${area == 'auto' ? 'active' : ''}"
                                th:href="@{/auto}">Auto</a>
                         </li>
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle color-hf" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Categorie
                                     </a>
                                     <ul class="dropdown-menu " >
@@ -46,7 +46,7 @@
                         </div>
 
                         <li class="nav-item">
-                            <a class="nav-link" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
+                            <a class="nav-link color-hf" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
                                th:href="@{/acquistoRifornitore}">Rifornimento</a>
                         </li>
                     </ul>
@@ -56,41 +56,41 @@
                           id="auto-search"
                           role="search">
                         <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Search">
-                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
                     </form>
                 </div>
 
             </div>
-            <div class="col-4 pt-2 pb-2">
+            <div class="col-4 ps-5 pt-2 pb-2">
                 <a class="navbar-brand" th:href="@{/}">
-                    <h5>gruppo</h5>
-                    <h1><strong>AUTOJAITA</strong><span class="fs-3"> S.R.L.</span></h1>
+                    <h5 class="color-hf">gruppo</h5>
+                    <h1 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-3"> S.R.L.</span></h1>
                 </a>
             </div>
             <div class="col-4 text-end fs-6 pt-5 pb-4">
-                <i class="fa fa-instagram" style="font-size:38px;color:red"></i>
-                <i class="fa fa-facebook" style="font-size:38px;color:blue"></i>
-                <i class="fa fa-twitter text-primary" style="font-size:38px;"></i>
+                <i class="fa fa-instagram "></i>
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
             </div>
         </div>
     </div>
 </header>
 <footer th:fragment="footer">
-    <div class="container-fluid bg-light pt-4 pb-3 border-top">
+    <div class="container-fluid bg-color-hf pt-4 pb-3 border-top">
         <div class="row">
             <div class="col-12 text-center">
-                <h6>gruppo</h6>
-                <h4><strong>AUTOJAITA</strong><span class="fs-6"> S.R.L.</span></h4>
+                <h6 class="color-hf">gruppo</h6>
+                <h4 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-6"> S.R.L.</span></h4>
                 <p style="font-size: 10px">partita iva: 0050000400009</p>
             </div>
             <div class="col-6 text-end" style="font-size: 12px">
-                <h5 class="text-warning">Vendita</h5>
+                <h5 class="color-hf">Vendita</h5>
                 <p>Lunedì - Venerdì: 9:00 - 13.30 / 14.30 - 19:30</p>
                 <p>Sabato: 9:00 - 13.30 / 14:30 - 18:00</p>
                 <p>Domenica: 10.00 - 13.00</p>
             </div>
             <div class="col-6" style="font-size: 12px">
-                <h5 class="text-warning">Assistenza</h5>
+                <h5 class="color-hf">Assistenza</h5>
                 <p>Lunedì - venerdì: 8:30 - 13:30 / 14:30 - 18:30</p>
                 <p>Sabato: 8:30 - 13:30</p>
                 <p>Domenica: Chiuso</p>
