--- a/src/main/resources/templates/automobili/create.html
+++ b/src/main/resources/templates/automobili/create.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/resources :: head('Auto Create')"></head>
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<div class="container text-center">
+<div class="container card mt-5 mb-5 text-center">
         <h1 class="">Create Auto</h1>
         <hr>
         <form
