--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -5,6 +5,10 @@
 <header th:replace="fragments/resources :: header"></header>
 <div class="container-fluid bg-light mt-5 border-bottom pb-4">
     <div class="row ms-5 g-5 flex-wrap justify-content-between">
+        <div th:if="${redirectMessage != null}" class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+            <div th:text="${redirectMessage}"></div>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+        </div>
         <div class="col-md-4" th:each="auto : ${listaAuto}">
             <div class="card ms-5" style="width: 17rem; padding: 0px;">
                 <a th:href="@{/auto/show/{id}(id=${auto.id})}">
