--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -29,7 +29,7 @@
             <td th:text="${rifo.price + ' €'}" class="text-center"></td>
             <td th:text="${rifo.getAuto().getName()}" th:if="${rifo.getAuto() != null}" class="text-center"></td>
             <td th:text="${rifo.quantita}" class="text-center"></td>
-            <td th:text="${rifo.getAuto().totaleAuto()}" class="text-center"></td>
+            <td th:text="${rifo.getAuto().acquisti()}" class="text-center"></td>
             <td th:text="${rifo.getAuto().vendite()}" class="text-center"></td>
             <td th:text="${rifo.getAuto().magazzino()}" class="text-center"></td>
         </tr>
